@@ -1,3 +1,11 @@
+2006-02-24  Alan Coopersmith  <alan.coopersmith@sun.com>
+
+	* greeter/Login.c: 
+	Bug #1391 <https://bugs.freedesktop.org/show_bug.cgi?id=1391>
+	Patch #4739 <https://bugs.freedesktop.org/attachment.cgi?id=4739>
+	xdm hangs in a loop when invalid xpm bitmap is used for logo
+	(Costantino Leandro <lcostantino@gmail.com>)
+
 2005-12-20  Kevin E. Martin  <kem-at-freedesktop-dot-org>
 
 	* configure.ac:
